# oversteer

./: .editorconfig  .gitignore  .ignore  MANIFEST.in  README.md  meson.build  meson_options.txt  oversteer.py  run.sh  setup.cfg  setup.py  ui.glade
data/: io.github.berarma.Oversteer.appdata.xml.in  io.github.berarma.Oversteer.desktop.in  meson.build  org.berarma.Oversteer.appdata.xml.in  org.berarma.Oversteer.desktop.in
data/definitions/: lg_g29.yaml
data/udev/: 99-fanatec-wheel-perms.rules  99-logitech-wheel-perms.rules  99-thrustmaster-pedal-perms.rules  99-thrustmaster-wheel-perms.rules
flatpak/: org.berarma.Oversteer.yaml  oversteer-udev-workaround.patch  python-dependencies.yaml
locale/es/LC_MESSAGES/: oversteer.po
oversteer/: .device_manager.py.swp  .wheels.py.swp  __main__.py  application.py  auto_switch_ui.py  combined_chart.py  definition.py  device.py  device_event.py  device_event_type.py  device_manager.py  gtk_handlers.py  gtk_ui.py  gui.py  linear_chart.py  main.css  main.ui  model.py  pedal_mode.py  performance_chart.py  portals.diff  process_watcher.py  profile.py  profile_auto_switcher.py  profiles.py  signal.py  test.py  test_chart.py  wheel_ids.py  wheels.py
po/: LINGUAS  POTFILES  POTFILES.in  ca.po  de.po  es.mo  es.po  fi.po  fr.po  gl.po  hu.po  pl.po  pt_BR.po  ru.po  tr.po
po/es/LC_MESSAGES/: oversteer.mo  oversteer.po
po/gl/LC_MESSAGES/: oversteer.mo  oversteer.po
scripts/: meson_post_install.py
udev/: 99-logitech-wheel-perms.rules
